cabal-version:      2.2
name:               fum-client
version:            0
synopsis:           FUM REST API
description:
  Bindings to <https://github.com/futurice/futurice-ldap-user-manager FUM API>.
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , aeson
    , aeson-compat
    , base
    , base-compat
    , cassava
    , constraints
    , deepseq
    , deepseq-generics
    , env-config
    , fum-types
    , futurice-prelude
    , hashable
    , http-api-data
    , http-client
    , http-client-tls
    , lens
    , monad-http
    , mtl
    , postgresql-simple
    , QuickCheck
    , strict-base-types
    , swagger2
    , text
    , vector
  exposed-modules:
    Control.Monad.FUM
    FUM
    FUM.Request
    FUM.Types
