cabal-version:      2.2
name:               fum-types
version:            0
synopsis:           FUM types
description:        In other words: @Login@ and @GroupName@ types
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables

  build-depends:
    , aeson
    , aeson-compat
    , base
    , base-compat
    , cassava
    , containers
    , env-config
    , futurice-constants
    , futurice-prelude
    , kleene
    , lucid
    , parsec
    , parsers
    , postgresql-simple
    , QuickCheck
    , regex-applicative-text
    , serialise
    , swagger2
    , template-haskell
    , text
    , vector

  exposed-modules:
    FUM.Types.GroupName
    FUM.Types.Login
