cabal-version: 2.2
name:          futurice-chart
version:       0
synopsis:      Chart futurice extras
description:   Chart futurice extras: stacked, histogram, ...
category:      Web
homepage:      https://github.com/futurice/haskell-mega-repo#readme
bug-reports:   https://github.com/futurice/haskell-mega-repo/issues
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
license:       BSD-3-Clause
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:   Haskell2010
  ghc-options:        -Wall
  hs-source-dirs:     src
  default-extensions:
    DeriveFunctor
    DeriveGeneric
    ScopedTypeVariables
  build-depends:
    , adjunctions
    , base
    , Chart
    , colour
    , data-default-class
    , futurice-prelude
    , lens
    , mtl
    , vector
  exposed-modules:
    Futurice.Chart.Enum
    Futurice.Chart.Histogram
    Futurice.Chart.Stacked
