cabal-version:  >= 1.10
name:           futurice-constants
version:        0

synopsis:       Futurice constants
description:    Futurice constants
category:       Web
homepage:       https://github.com/futurice/haskell-mega-repo#readme
bug-reports:    https://github.com/futurice/haskell-mega-repo/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==7.10.3, GHC==8.0.2
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/futurice/haskell-mega-repo

library
  hs-source-dirs:
      src
  default-extensions:
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ScopedTypeVariables
  ghc-options: -Wall
  build-depends:
      base            >=4.7      && <4.11
    , adjunctions
    , aeson-compat
    , containers
    , distributive
    , futurice-prelude
    , lucid
    , QuickCheck
    , swagger2
    , template-haskell
    , text
    , vector
  exposed-modules:
      Futurice.Constants
      Futurice.Services
  other-modules:
      Futurice.Constants.Internal
  default-language: Haskell2010
