cabal-version:      2.2
name:               futurice-constants
version:            0
synopsis:           Futurice constants
description:        Futurice constants
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  constants.json

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-extensions:
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ScopedTypeVariables
  build-depends:
    , adjunctions
    , aeson-compat
    , base
    , containers
    , distributive
    , futurice-prelude
    , lucid
    , QuickCheck
    , servant-client
    , swagger2
    , template-haskell
    , text
    , vector
  exposed-modules:
    Futurice.Constants
    Futurice.Services
  other-modules:      Futurice.Constants.Internal
