cabal-version:      2.2
name:               futurice-foundation
version:            0
synopsis:           Futurice ZURB Foundation helpers
description:        ...
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Toni Okuogume <toni.okuogume@futurice.com>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables
  build-depends:
    , aeson
    , aeson-compat
    , base
    , clay
    , colour
    , file-embed-lzma
    , fum-types
    , futurice-logo
    , futurice-prelude
    , futurice-tribes
    , generics-sop
    , generics-sop-lens
    , kleene
    , lambdacss
    , language-javascript   ^>=0.6.0.8
    , lens
    , lucid
    , servant
    , servant-lucid
    , servant-server
    , swagger2
    , template-haskell
    , text
    , time
    , unordered-containers
    , wai-app-static
    , writer-cps-mtl
  exposed-modules:
    Futurice.CommandResponse
    Futurice.JavaScript
    Futurice.JavaScript.TH
    Futurice.Lomake
    Futurice.Lucid.Foundation
    Futurice.Lucid.Generics
    Futurice.Lucid.Navigation
    Futurice.Lucid.Select2
    Futurice.Lucid.Style
