cabal-version:      2.2
name:               futurice-github
version:            0
synopsis:           Additions to the @github@ package
description:        Additions to the @github@ package
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:   Haskell2010
  ghc-options:        -Wall
  hs-source-dirs:     src
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables
  build-depends:
    , aeson
    , aeson-compat
    , base
    , binary
    , binary-tagged
    , constraints
    , dependent-sum
    , futurice-prelude
    , generics-sop
    , github
    , lens
    , postgresql-simple
    , swagger2
    , text
  exposed-modules:    Futurice.GitHub
