cabal-version:  1.12
name:           futurice-integrations
version:        0
synopsis:       Tools to work uniformly with different integrations
description:    ...
category:       Web
homepage:       https://github.com/futurice/haskell-mega-repo#readme
bug-reports:    https://github.com/futurice/haskell-mega-repo/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==8.4.4
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  default-extensions:
    GeneralizedNewtypeDeriving
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    ScopedTypeVariables
    StandaloneDeriving
  build-depends:
      base                  >=4.11   && <4.12
    , aeson
    , aeson-compat
    , async
    , binary-tagged
    , bytestring
    , cassava
    , constraints
    , containers
    , dependent-sum
    , env-config
    , fin
    , flowdock-rest
    , fum-api
    , fum-client
    , futurice-github
    , futurice-prelude
    , futurice-reports
    , futurice-tribes
    , generics-sop
    , generics-sop-lens
    , github
    , haxl
    , haxl-fxtra
    , http-client
    , http-client-tls
    , intervals
    , lens
    , lucid
    , monad-logger
    , monad-time
    , personio-client
    , planmill-client
    , regex-applicative-text
    , step-function
    , swagger2
    , text
    , time
    , transformers
    , tz
    , unordered-containers
    , vector
    , zlib
  exposed-modules:
      Futurice.Daily
      Futurice.Integrations
      Futurice.Integrations.Classes
      Futurice.Integrations.Common
      Futurice.Integrations.GitHub
      Futurice.Integrations.Monad
      Futurice.Integrations.Serv
      Futurice.Integrations.Serv.Config
      Futurice.Integrations.Serv.Contains
      Futurice.Integrations.TimereportKind
      Futurice.Integrations.Types
