cabal-version:      2.2
name:               futurice-integrations
version:            0
synopsis:           Tools to work uniformly with different integrations
description:        ...
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-extensions:
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    GeneralizedNewtypeDeriving
    ScopedTypeVariables
    StandaloneDeriving

  build-depends:
    , aeson
    , aeson-compat
    , async
    , base
    , binary-tagged
    , bytestring
    , cassava
    , constraints
    , containers
    , dependent-sum
    , env-config
    , fin
    , flowdock-rest
    , fum-api
    , fum-client
    , futurice-github
    , futurice-prelude
    , futurice-reports
    , futurice-tribes
    , generics-sop
    , generics-sop-lens
    , github
    , google-client
    , haxl
    , haxl-fxtra
    , http-client
    , http-client-tls
    , intervals
    , lens
    , log-base
    , lucid
    , monad-memoize
    , monad-time
    , okta-client
    , peakon-client
    , personio-client
    , planmill-client
    , power-client
    , regex-applicative-text
    , servant-client-core
    , slack-client
    , step-function
    , swagger2
    , text
    , time
    , transformers
    , tz
    , unordered-containers
    , vector
    , zlib

  exposed-modules:
    Futurice.Daily
    Futurice.Integrations
    Futurice.Integrations.Classes
    Futurice.Integrations.Common
    Futurice.Integrations.GitHub
    Futurice.Integrations.Monad
    Futurice.Integrations.Monad.StateSet
    Futurice.Integrations.Serv
    Futurice.Integrations.Serv.Config
    Futurice.Integrations.Serv.Contains
    Futurice.Integrations.Serv.FromList
    Futurice.Integrations.TimereportKind
    Futurice.Integrations.Types
