cabal-version: 2.2
name: futurice-lambda
version: 0

library
  hs-source-dirs:   src
  c-sources:        cbits/cbits.c
  default-language: Haskell2010
  exposed-modules:
    Futurice.Lambda

  build-depends:
    , base
    , aeson
    , amazonka
    , amazonka-cloudwatch
    , bytestring
    , containers
    , env-config
    , futurice-prelude
    , futurice-metrics
    , log-base
    , text
