cabal-version: 2.2
name: futurice-lambda
version: 0

library
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Futurice.Lambda

  build-depends:
    , base
    , aeson
    , amazonka
    , amazonka-cloudwatch
    , aws-lambda-runtime
    , bytestring
    , containers
    , env-config
    , futurice-prelude
    , futurice-metrics
    , log-base
    , text
