cabal-version: 2.2
name:          futurice-lambda
version:       0

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Futurice.Lambda
  build-depends:
    , aeson
    , amazonka
    , amazonka-cloudwatch
    , aws-lambda-runtime
    , base
    , bytestring
    , containers
    , env-config
    , futurice-metrics
    , futurice-prelude
    , log-base
    , text
