cabal-version:      2.2
name:               futurice-logo
version:            0
synopsis:           Generate futurice logo
description:        ... and other stuff
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , base                 >=4.7 && <4.15
    , base-compat          >=0.6 && <0.12
    , bytestring           ^>=0.10.4.0
    , clay
    , colour
    , deepseq              >=1.3.0.2 && <1.5
    , file-embed           >=0.0.8.2 && <0.0.14
    , futurice-prelude
    , hashable             ^>=1.3.0.0
    , http-media           >=0.6.2 && <0.9
    , JuicyPixels          >=3.2.7 && <3.4
    , servant              >=0.4.4.5 && <0.19
    , servant-JuicyPixels  ^>=0.3.0.0
    , servant-server       >=0.4.4.5 && <0.19
    , swagger2             >=2.0 && <2.7
    , tagged               >=0.7.3 && <0.9
    , text
  exposed-modules:
    Futurice.Colour
    Futurice.Logo
    Servant.Futurice.Favicon
