cabal-version:  2.2
name:           futurice-postgres
version:        0

synopsis:       Postgres stuff
description:    ...
category:       Database
homepage:       https://github.com/futurice/haskell-mega-repo#readme
bug-reports:    https://github.com/futurice/haskell-mega-repo/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD-3-Clause
license-file:   LICENSE
tested-with:    GHC==8.0.2, GHC==8.2.1
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/futurice/haskell-mega-repo

library
  hs-source-dirs:
      src
  default-extensions: DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable ScopedTypeVariables
  ghc-options: -Wall
  build-depends:
    , base
    , aeson-compat
    , containers
    , exceptions
    , futurice-metrics
    , futurice-prelude
    , lens
    , postgresql-simple
    , pretty-compact
    , resource-pool
    , semigroups
  exposed-modules:
      Futurice.Postgres
      Futurice.Postgres.SqlBuilder
  default-language: Haskell2010
