cabal-version:      2.2
name:               futurice-pure-trans
version:            0
synopsis:           A reader monad transformer to provide context to IO
description:        A reader monad transformer to provide context to IO
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables
  ghc-options:        -Wall
  build-depends:
    , aeson
    , base
    , futurice-prelude
    , http-client
    , lens
    , lifted-base
    , log-base
    , monad-http
    , monadcryptorandom
    , resource-pool
    , unordered-containers
  exposed-modules:    Futurice.Trans.PureT
