cabal-version:      2.2
name:               futurice-reports
version:            0
synopsis:           Various reports utils
description:        ...
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables
  build-depends:
    , aeson
    , aeson-compat
    , base
    , cassava
    , constraints
    , containers
    , file-embed
    , flowdock-rest
    , fum-types
    , futurice-foundation
    , futurice-prelude
    , futurice-tribes
    , generics-sop
    , github
    , lucid
    , mmorph
    , mtl
    , personio-client
    , planmill-client
    , servant
    , servant-cassava
    , strict-base-types
    , swagger2
    , text
    , these
    , transformers
  exposed-modules:    Futurice.Report.Columns
